# Flight-Test-Data-Verification-Platform-FTD-V-

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
database/: schema.sql
docs/: audit-log.md
docs/templates/: report_template.html
examples/: sample_flight.csv
include/astvdp/: interfaces.h  sqlite_compat.h  types.h
platform/: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
platform/apps/api/: Dockerfile  package.json
platform/apps/api/src/: app.module.ts  main.ts
platform/apps/api/src/artifacts/: artifacts.controller.ts  artifacts.service.ts
platform/apps/api/src/common/: config.service.ts  config.ts  prisma.service.ts  queue.service.ts
platform/apps/api/src/health/: health.controller.spec.ts  health.controller.ts
platform/apps/api/src/jobs/: jobs.controller.ts  jobs.service.ts
platform/apps/api/src/jobs/dto/: create-simulate-job.dto.ts  create-upload-job.dto.ts
platform/apps/api/src/sessions/: sessions.controller.ts  sessions.service.ts
platform/apps/web/: Dockerfile  package.json  tailwind.config.ts  tsconfig.json
platform/apps/web/app/: globals.css  layout.tsx  page.tsx
platform/apps/web/app/jobs/[jobId]/: page.tsx
platform/apps/web/app/runs/new/: page.tsx
platform/apps/web/app/sessions/: page.tsx
platform/apps/web/app/sessions/[sessionId]/: page.tsx
platform/apps/web/app/sessions/[sessionId]/report/: page.tsx
platform/apps/web/components/: app-shell.tsx  metric-card.tsx  status-pill.tsx
platform/apps/web/lib/: api.ts
platform/apps/worker/: Dockerfile  jest.config.cjs  package.json  tsconfig.json
platform/apps/worker/src/: app.module.ts  main.ts
platform/apps/worker/src/common/: config.service.ts  config.ts
platform/apps/worker/src/worker/: analysis.worker.ts  engine-command.spec.ts  engine-command.ts
platform/prisma/: schema.prisma
platform/prisma/migrations/20260214153000_init/: migration.sql
src/: main.cpp
src/analysis/: metrics_engine.cpp  metrics_engine.h
src/core/: database.cpp  database.h
src/diagnostics/: diagnostic_engine.cpp  diagnostic_engine.h
src/fusion/: complementary_fusion.cpp  complementary_fusion.h
src/ingest/: csv_ingest.cpp  csv_ingest.h
src/reporting/: report_generator.cpp  report_generator.h
src/simulation/: flight_simulator.cpp  flight_simulator.h
src/verification/: safety_verifier.cpp  safety_verifier.h
